# ai-architect.rs

./: Cargo.toml  README.md
examples/: rust-architect.d3l
src/: grammar.pest  grammar_inc.pest  main.rs  parser.rs
src/design_prompter/: genesis_prompt.rs  mod.rs
src/parser/: errors.rs  grammar.rs  mod.rs
src/prompter/: client.rs  mod.rs
