[package]
name = "ai-architect-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
pest = "2.6.0"
pest_derive = "2.6.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = "1.28.2"

[dev-dependencies]
mockito = "1.0.2"
